data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2459.wast
;; 10. **Test Description**: Prepare a block which improperly mixes stack pops and pushes, leading to stack underflow at certain branch points not caught by WebAssembly but handled by `wizard_engine`.     - **Constraint Checked**: Proper stack unwinding and balancing within blocks.     - **Relation to CFG**: CFG incompleteness due to stack errors causing unexpected termination or failure to follow correct paths.

(assert_invalid
  (module 
    (func $stack-mix (result i32)
      (block (result i32 i32)
        (i32.const 1) (br 0) 
        (i32.const 2) (i32.add)
      )
    )
  )
  "type mismatch"
)